@startuml
skinparam groupInheritance 4

package com.isep.utils {
interface "InputParser"
InputParser <|.. ConsoleParser
InputParser <|.. GUIParser
interface "OutputManager"
OutputManager <|.. ConsoleOutput
}

package com.isep.game {
class "Game"
class "Player"

package com.isep.game.cards {
abstract class "Card"
Card <|-- GreyCard
Card <|-- YellowCard
Card <|-- BlueCard
Card <|-- GreenCard
Card <|-- RedCard
class "Deck"
Deck o-- Card
class "Hand"
Hand o-- Card
class "ProgressTokenStack"
class "ProgressToken"
ProgressTokenStack o-right-- ProgressToken
}

package com.isep.game.wonders {
abstract class "Wonder"
Wonder <|-- Alexandria
Wonder <|-- Babylon
Wonder <|-- Ephesus
Wonder <|-- Giza
Wonder <|-- Halicarnassus
Wonder <|-- Olympia
Wonder <|-- Rhodes
Wonder o-- Deck
class "Stage"
Wonder *-right- Stage
}

Game o-left- InputParser
Game o-left- OutputManager
Game *-right- Player
Game o-- ProgressTokenStack
Game o-- Deck
Player o-- Wonder
Player o-- Hand
}

@enduml
